♻️Actualización Cliente para obtener los datos del perfil de un cliente, hecho un nuevo método que busque al cliente por el usuarioId y con los permisos en SecurityConfig